# directory_statistics

./: CMakeLists.txt  file_and_directory_handling.cpp  file_and_directory_handling.h  main.cpp
finger/: functions.c  functions.h  sensor.c  sensor.h
inne/: asdfg.txt  sprawozdanie_lab2_lesiak_l02.docx
z qt/: mainwindow.cpp  mainwindow.h
